--- a/typescriptDev/.gitignore
+++ b/typescriptDev/.gitignore
@@ -1,6 +1,9 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/node,macos
-# Edit at https://www.toptal.com/developers/gitignore?templates=node,macos
+# Created by https://www.toptal.com/developers/gitignore/api/macos,node,homebrew
+# Edit at https://www.toptal.com/developers/gitignore?templates=macos,node,homebrew
+
+### Homebrew ###
+Brewfile.lock.json
 
 ### macOS ###
 # General
@@ -175,4 +178,4 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
-# End of https://www.toptal.com/developers/gitignore/api/node,macos
+# End of https://www.toptal.com/developers/gitignore/api/macos,node,homebrew
