add *.tar to gitignore

--- a/typescriptDev/.gitignore
+++ b/typescriptDev/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macos,node,homebrew
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,node,homebrew
 
+# tar ignore
+*.tar 
+
 ### Homebrew ###
 Brewfile.lock.json
 
