--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
+# Created by https://www.toptal.com/developers/gitignore/api/node,macos,git,homebrew
+# Edit at https://www.toptal.com/developers/gitignore?templates=node,macos,git,homebrew
 
-# Created by https://www.toptal.com/developers/gitignore/api/macos,node,homebrew
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,node,homebrew
+### Git ###
+# Created by git for backups. To disable backups in Git:
+# $ git config --global mergetool.keepBackup false
+*.orig
 
-# tar ignore
-*.tar 
+# Created by git when using merge tools for conflicts
+*.BACKUP.*
+*.BASE.*
+*.LOCAL.*
+*.REMOTE.*
+*_BACKUP_*.txt
+*_BASE_*.txt
+*_LOCAL_*.txt
+*_REMOTE_*.txt
 
 ### Homebrew ###
 Brewfile.lock.json
@@ -181,4 +192,4 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
-# End of https://www.toptal.com/developers/gitignore/api/macos,node,homebrew
+# End of https://www.toptal.com/developers/gitignore/api/node,macos,git,homebrew
