--- a/imageProcessingAPI/package.json
+++ b/imageProcessingAPI/package.json
@@ -4,13 +4,12 @@
   "description": "Image Processing App/API",
   "main": "index.ts",
   "scripts": {
-    "jasmine": "jasmine",
-    "lint": "eslint --ext .ts",
-    "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "build": "npx tsc",
-    "start": "nodemon src/index.ts"
-    
-
+    "jasmine": "jasmine",
+    "test": "npm run build && npm run jasmine",
+    "start": "nodemon src/index.ts",
+    "lint": "eslint --ext .ts",
+    "prettify": "prettier --config .prettierrc.json 'src' --write"
   },
   "author": "",
   "license": "ISC",
@@ -19,12 +18,17 @@
     "express": "^4.18.1",
     "jasmine": "^4.2.1",
     "jasmine-spec-reporter": "^7.0.0",
+    "sharp": "^0.30.7",
     "supertest": "^6.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
     "@types/node": "^18.0.0",
+    "@types/sharp": "^0.30.4",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
