--- a/imageProcessingAPI/package.json
+++ b/imageProcessingAPI/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "mageprocessingapi",
+  "name": "image-processing-api",
   "version": "1.0.0",
   "description": "Image Processing App/API",
-  "main": "index.ts",
+  "main": "src/index.js",
   "scripts": {
+    "lint": "eslint src/**/*.ts",
+    "format": "eslint src/**/*.ts --fix",
+    "prettier": "prettier --config .prettierrc src/**/*.ts --write",
     "build": "npx tsc",
     "jasmine": "jasmine",
-    "test": "npm run build && npm run jasmine",
     "start": "nodemon src/index.ts",
-    "lint": "eslint --ext .ts",
-    "prettify": "prettier --config .prettierrc.json 'src' --write"
+    "test": "npm run build && npm run jasmine"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
     "express": "^4.18.1",
-    "jasmine": "^4.2.1",
-    "jasmine-spec-reporter": "^7.0.0",
-    "sharp": "^0.30.7",
-    "supertest": "^6.2.3"
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -29,12 +26,17 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "@typescript-eslint/parser": "^5.30.3",
+    "axios": "^0.27.2",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^2.0.18",
+    "jasmine": "^4.2.1",
+    "jasmine-spec-reporter": "^7.0.0",
+    "nodemon": "^1.3.3",
     "prettier": "^2.7.1",
+    "supertest": "^6.2.4",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
-  }
+  },
+  "keywords": []
 }
