--- a/imageProcessingAPI/package.json
+++ b/imageProcessingAPI/package.json
@@ -3,40 +3,8 @@
   "version": "1.0.0",
   "description": "Image Processing App/API",
   "main": "src/index.js",
-  "scripts": {
-    "lint": "eslint src/**/*.ts",
-    "format": "eslint src/**/*.ts --fix",
-    "prettier": "prettier --config .prettierrc src/**/*.ts --write",
-    "build": "npx tsc",
-    "jasmine": "jasmine",
-    "start": "nodemon src/index.ts",
-    "test": "npm run build && npm run jasmine"
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.1",
-    "sharp": "^0.30.7"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/jasmine": "^4.0.3",
-    "@types/node": "^18.0.0",
-    "@types/sharp": "^0.30.4",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
-    "axios": "^0.27.2",
-    "eslint": "^8.18.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jasmine": "^4.2.1",
-    "jasmine-spec-reporter": "^7.0.0",
-    "nodemon": "^1.3.3",
-    "prettier": "^2.7.1",
-    "supertest": "^6.2.4",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.4"
-  },
   "keywords": []
 }
